# python-and-dog

./: .gitignore
assets/3d-models/button/: CE3_button-cover-and-bottom-both.3mf  CE3_button-cover.3mf
assets/3d-models/dispenser/: dispenser-bottom.blend  dispenser-cap.blend  dispenser-corpus.blend  dispenser-old.blend  dispenser-screw.blend  dispenser.blend
assets/schema-fritz/: dispenser-with-just-resistors.fzz  dispenser-with-keepalive.fzz  usb-keepalive-pnp-for-esp32.fzz  usb-keepalive.fzz
button/: Makefile  aconn.py  app.py  blinker.py  config.py  dispenser_client.py  dodo.py  logging_handlers.py  main.py  mypy.ini  stdlib.py  tox.ini
button/blender/: CE3_button-bottom.3mf  button-cover-etc-shrinked.blend
button/localstubs/: esp.py  machine.py  usyslog.py  webrepl.py
button/requirements/: base.txt  dev.txt  tests.txt
button/schemat-fritzing/: button-hole-board.fzz  button.fzz
button/tests/: common.py  test_app.py  test_blinker.py  test_conn.py  utils.py
button/utils/: mock-server.py
dispenser/: Makefile  config.py  conn.py  dodo.py  main.py  pyproject.toml  servo.py  template.py  tox.ini  upip_patch.py  webrepl_cfg.py
dispenser/blender/: 6l-bottle-screw.blend  cap.blend  cover.blend  dispenser-screw-os.blend
dispenser/blender/vertical/: bottom-adapter.blend  screw-no-1.blend
dispenser/localstubs/: README.md  common.py  machine.py  network.py
dispenser/requirements/: base.txt  dev.txt
dispenser/tests/: tests.py
schema-fritz/: button-with-just-resistor.fzz  dispenser-with-just-resistors.fzz
schema-fritz/attempts/: dispenser-1.fzz  dispenser-holeboard.fzz
(+14 files in other folders)
