[tool.poetry]
name = "dispenser"
version = "0.1.0"
description = ""
authors = ["maho <maho@maho.pro>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
doit = "^0.36.0"
doit-api = "^0.8.0"
tomli = "^2.2.1"


[tool.poetry.group.dev.dependencies]
esptool = "^4.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
