# set consistent flake8 and black configuration
[tool.black]
line-length = 88

[tool.flake8]
max-line-length = 88



[tool.poetry]
name = "dispenser"
version = "0.1.0"
description = ""
authors = ["maho <maho@maho.pro>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
doit = "^0.36.0"
doit-api = "^0.8.0"
tomli = "^2.2.1"
mpfshell = "^0.9.3"
pipkin = "^2.1b1"


[tool.poetry.group.dev.dependencies]
esptool = "^4.8.1"
black = "^24.10.0"
pdbpp = "^0.10.3"
flake8 = "^7.1.1"
flake8-pyproject = "^1.2.3"


[tool.poetry.group.candidates-dev.dependencies]
rshell = "^0.0.36"
shell49 = "^0.1.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
